language/move-lang/tests/move_check/translated_ir_tests/move/signer/copy_loc_transitive.move
module 0x8675309::M {
    struct S<T> has copy, drop { s: T }
    fun t(s: signer): S<signer> {
        let x = S<signer> { s };
        copy x
    }
}

// check: COPYLOC_RESOURCE_ERROR
